--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chec/commerce.js": "^2.8.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@react-spring/parallax": "^9.5.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -10,10 +13,13 @@
     "bootstrap": "^5.2.1",
     "gsap": "^3.11.1",
     "jarallax": "^2.0.4",
+    "peer": "^0.6.1",
+    "peers": "^0.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.37.0",
     "react-multi-carousel": "^2.8.2",
     "react-pixi-fiber": "^1.0.2",
     "react-router": "^6.4.2",
