--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "peer": "^0.6.1",
     "peers": "^0.1.0",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0",
@@ -30,6 +31,7 @@
     "react-scroll-parallax": "^3.3.1",
     "react-select": "^5.4.0",
     "react-spring": "^9.5.4",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
